crates/tmark-writers/tests/snapshots/fixtures__attributes-no-host@html.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
<p>[x]{#id}</p>

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
