crates/tmark-writers/tests/snapshots/fixtures__attributes-no-host@latex.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
[x]\{\#id\}

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
