crates/tmark-writers/tests/snapshots/fixtures__attributes-value-quote@html.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
<h1 id="sec:q">H</h1>

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
