crates/tmark-writers/tests/snapshots/fixtures__attributes-value-quote@latex.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
\section{H}\label{sec:q}

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
