crates/tmark-writers/tests/snapshots/fixtures__attributes-value-quote@typst.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
= H <sec:q>

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
