crates/tmark-writers/tests/snapshots/fixtures__autolink-literal-escapes@html.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
<p>see http://x.y, www.x.y/z, me@x.y and <a href="http://www.example.com">www.example.com</a> or ftp://x.y</p>

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
