crates/tmark-writers/tests/snapshots/fixtures__autolink-literal-escapes@latex.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
see http://x.y, www.x.y/z, me@x.y and \href{http://www.example.com}{www.example.com} or ftp://x.y

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
