crates/tmark-writers/tests/snapshots/fixtures__blockquote-attributes@html.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
<blockquote class="epigraph">
<p>Simplicity is prerequisite for reliability.</p>
</blockquote>

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
